# vrx

./: .gitignore
robotx_2022/: CMakeLists.txt  package.xml
robotx_2022/launch/: robotx.launch
robotx_2022/worlds/: finals_course.world.xacro  qualification_course.world.xacro  semis_course.world.xacro
vrx_gazebo/: CMakeLists.txt
vrx_gazebo/models/2022_course_a/: model.config  model.sdf
vrx_gazebo/models/2022_course_b/: model.config  model.sdf
vrx_gazebo/models/blue_projectile/: model.sdf
vrx_gazebo/models/navigation_task/: model.sdf
vrx_gazebo/models/navigation_task_2022/: model.config  model.sdf
vrx_gazebo/models/navigation_task_2_2022/: model.config  model.sdf
vrx_gazebo/models/platform_2022/: model.config  model.sdf.erb
vrx_gazebo/models/platform_2022_base/: model.config  model.sdf.erb
vrx_gazebo/models/robotx_2022_entrance_gate/: model.config  model.sdf
vrx_gazebo/models/robotx_2022_finals_entrance_gate/: model.config  model.sdf
vrx_gazebo/worlds/: sydneyregatta.xacro
