<?xml version="1.0"?>
<package format="2">
  <name>robotx_2022</name>
  <version>0.1.0</version>
  <description>The robotx_2022 package</description>
  <maintainer email="owo@uwu.umu"></maintainer>

  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>vrx_gazebo</build_depend>
  <build_depend>wave_gazebo</build_depend>
  <build_depend>rotors_gazebo</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>vrx_gazebo</build_export_depend>
  <build_export_depend>wave_gazebo</build_export_depend>
  <build_export_depend>jellyfish_description</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>tf2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>vrx_gazebo</exec_depend>
  <exec_depend>wave_gazebo</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <exec_depend>rotors_gazebo_plugins</exec_depend>

  <export>
    <architecture_independent />
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
